fixed the issue with the movie tiles not showing up side by side the issue was with the width being fixed at 200px added some section code to the enclose the Featured Movie components with the props in them

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -44,7 +44,7 @@ nav {
 ==============================*/
 .card {
   margin-bottom: 30px;
-  width: 200px;
+  /* width: 200px; */
 }
 .card__cover {
   position: relative;
